# live-traffic

./: README.md  catalog-info.yaml  requirements.txt
.reuse/: dep5
importer/: README.md  import_tiploc.py
rrltdatabase/: README.md  setup.cfg  setup.py
rrltdatabase/rrltdb/: models.py
rrltdatabase/rrltdb/alembic/: env.py
rrltdatabase/rrltdb/alembic/versions/: 4bc291ead928_add_tiploc.py  f3c7e58d810b_add_tiploc.py
rrltdatabase/src/: models.py
rrltdatabase/src/alembic/versions/: 5ec6e9da08f8_tiploc_table.py
src/: main.py
