[metadata]
name = rrltdb
version = 1.0.0
author = Matthew Macdonald-Wallace
author_email = matt@doics.co
description = Database models for RRLT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/proffalken/rrlt
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = rrltdb:
python_requires = >=3.6
